upd: Maquetado de reporte de ganacias diarias

--- a/Administrador/src/app/management/components/menu/menu.component.html
+++ b/Administrador/src/app/management/components/menu/menu.component.html
@@ -111,7 +111,7 @@
             </a>
           </li>
           <li>
-            <a [routerLink]="['pedidos/balance']" [routerLinkActive]="['router-link-active']"
+            <a [routerLink]="['reportes/balance']" [routerLinkActive]="['router-link-active']"
               matTooltip="Enviar mensaje al repartidor" [matTooltipPosition]='globales.POSITION_OPTIONS[5]'>
               <i class="fas fa-balance-scale"></i>
               <span>Balance</span>
