--- a/Administrador/src/app/management/components/banners/banners.component.html
+++ b/Administrador/src/app/management/components/banners/banners.component.html
@@ -28,16 +28,16 @@
         <table mat-table matSort [dataSource]="dataSource">
 
           <ng-container matColumnDef="Fotografia">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header width="8%" class="text-center"> Fotograf&iacute;a</th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header width="10%" class="text-center"> Fotograf&iacute;a</th>
             <td mat-cell *matCellDef="let element"> <img class="img-fluid img-thumbnail rounded"
                 src="{{element.Fotografia}}" alt="Imagen banner" /> </td>
           </ng-container>
+
           <!-- Name Column -->
-          <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Nombre</th>
+          <ng-container matColumnDef="Nombre" >
+            <th mat-header-cell *matHeaderCellDef mat-sort-header > Nombre</th>
             <td mat-cell *matCellDef="let element"> {{element.Nombre}} </td>
           </ng-container>
-
 
           <ng-container matColumnDef="estatus">
             <th mat-header-cell *matHeaderCellDef mat-sort-header width="5%" class="text-center"> Activo </th>
@@ -54,8 +54,8 @@
               <a routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}" [queryParams]="{ to: 'c'}">
                 <mat-icon aria-hidden="false" aria-label="Consultar" matTooltip="Consultar">search</mat-icon>
               </a>
-              <a *ngIf="element.Estatus && element.Acceso?.TipoUsuario != TipoUsuario.CLIENTE" routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}"
-                [queryParams]="{ to: 'e'}">
+              <a *ngIf="element.Estatus"
+                routerLink="/admin-dashboard/administracion/usuarios/{{element.IdPersona}}" [queryParams]="{ to: 'e'}">
                 <mat-icon aria-hidden="false" aria-label="Editar" matTooltip="Editar">edit</mat-icon>
               </a>
             </td>
@@ -69,8 +69,8 @@
     </div>
   </div>
 
-  <button [routerLink]="['/admin-dashboard/administracion/banners/agregar']" mat-fab
-    class="float-button primary-color add-button" color="primary" matTooltip="Agregar banners">
+  <button (click)="agregar()" mat-fab class="float-button primary-color add-button" color="primary"
+    matTooltip="Agregar banners">
     <mat-icon aria-hidden="false" aria-label="Agregar">add</mat-icon>
   </button>
 </div>
