--- a/Administrador/src/styles.scss
+++ b/Administrador/src/styles.scss
@@ -143,3 +143,7 @@ th.mat-header-cell {
 .custom-dialog-container .mat-dialog-container {
   padding: 0 !important;
 }
+
+.hide {
+  display: none !important;
+}
